kubectl/yaml/emptyDir.yml
apiVersion: v1
kind: Pod
metadata: 
  name: producer-consumer
spec:
  containers:
    - name: producer
      image: busybox
      volumeMounts: 
      - name: shared-volume
        mountPath: /producer_dir
      args:
      - /bin/sh
      - -c
      - echo "hello this is producer" > /producer_dir/hello ; sleep 3600
    - name: consumer
      image: busybox
      volumeMounts:
      - name: shared-volume
        mountPath: /consumer_dir
      args:
      - /bin/sh
      - -c
      - cat  /consumer_dir/hello ; sleep 3600
  volumes:
  - name: shared-volume
    emptyDir: {}
