kubectl/yaml/nodeSelector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-node-selector
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    one: ssd
