kubectl/yaml/hello-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx-ingress
spec:
  rules:
  - host: k8s.hello-nginx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-nginx
            port: 
               number: 8080
